Added more changes to narrow design

--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -182,8 +182,8 @@
                             <div class="d-flex align-items-center">
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
-                                width="24"
-                                height="24"
+                                width="20"
+                                height="20"
                                 viewBox="0 0 12 16"
                               >
                                 <path
@@ -192,7 +192,7 @@
                                   d="M2 13c0 .59 0 1-.59 1H.59C0 14 0 13.59 0 13c0-.59 0-1 .59-1h.81c.59 0 .59.41.59 1H2zm2.59-9h6.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1H4.59C4 2 4 2.41 4 3c0 .59 0 1 .59 1zM1.41 7H.59C0 7 0 7.41 0 8c0 .59 0 1 .59 1h.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01zm0-5H.59C0 2 0 2.41 0 3c0 .59 0 1 .59 1h.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01zm10 5H4.59C4 7 4 7.41 4 8c0 .59 0 1 .59 1h6.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01zm0 5H4.59C4 12 4 12.41 4 13c0 .59 0 1 .59 1h6.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01z"
                                 />
                               </svg>
-                              <span class="ml-3">Detaljer</span>
+                              <span class="ml-2">Detaljer</span>
                             </div>
                           </h5>
                           <ul class="list-group mb-3 w-50 mr-3 ml-3">
@@ -340,8 +340,8 @@
                               <div class="d-flex align-items-center">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
-                                  width="24"
-                                  height="24"
+                                  width="20"
+                                  height="20"
                                   viewBox="0 0 14 16"
                                 >
                                   <path
@@ -350,7 +350,7 @@
                                     d="M9 4V3c0-.55-.45-1-1-1H6c-.55 0-1 .45-1 1v1H1c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1H9zM6 3h2v1H6V3zm7 6H8v1H6V9H1V5h1v3h10V5h1v4z"
                                   />
                                 </svg>
-                                <span class="ml-3">Navne</span>
+                                <span class="ml-2">Navne</span>
                               </div>
                             </h5>
                           </div>
@@ -489,8 +489,8 @@
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="24"
+                                    width="20"
+                                    height="20"
                                     viewBox="0 0 14 16"
                                   >
                                     <path
@@ -499,7 +499,7 @@
                                       d="M3 10h4V9H3v1zm0-2h6V7H3v1zm0-2h8V5H3v1zm10 6H1V3h12v9zM1 2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1H1z"
                                     />
                                   </svg>
-                                  <span class="ml-3">Interne noter</span>
+                                  <span class="ml-2">Interne noter</span>
                                 </div>
                               </h5>
                               <div class="card ml-3 mr-3">
@@ -550,8 +550,8 @@ of Lorem Ipsum.
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="24"
+                                    width="20"
+                                    height="20"
                                     viewBox="0 0 14 16"
                                   >
                                     <path
@@ -560,7 +560,7 @@ of Lorem Ipsum.
                                       d="M3 10h4V9H3v1zm0-2h6V7H3v1zm0-2h8V5H3v1zm10 6H1V3h12v9zM1 2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1H1z"
                                     />
                                   </svg>
-                                  <span class="ml-3">Publikums noter</span>
+                                  <span class="ml-2">Publikums noter</span>
                                 </div>
                               </h5>
                               <div class="card ml-3 mr-3">
@@ -621,18 +621,18 @@ of Lorem Ipsum.
                   aria-labelledby="aktorer-tab"
                 >
                   <div class="container-fluid">
-                    <div class="row mb-3 mt-3">
-                      <div class="card p-lg-3 w-100 mb-10">
+                    <div class="row mb-0 mt-3">
+                      <div class="card p-lg-2 w-100 mb-0">
                         <div class="card-body">
                           <div
                             class="d-flex align-items-center justify-content-between"
                           >
-                            <h4 class="mb-3 ml-1 mt-3 font-weight-bold">
+                            <h5 class="mb-3 ml-1 mt-3 font-weight-bold">
                               <div class="d-flex align-items-center">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
-                                  width="24"
-                                  height="24"
+                                  width="20"
+                                  height="20"
                                   viewBox="0 0 14 16"
                                 >
                                   <path
@@ -641,11 +641,11 @@ of Lorem Ipsum.
                                     d="M9 4V3c0-.55-.45-1-1-1H6c-.55 0-1 .45-1 1v1H1c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1H9zM6 3h2v1H6V3zm7 6H8v1H6V9H1V5h1v3h10V5h1v4z"
                                   />
                                 </svg>
-                                <span class="ml-3">Overordnede aktører</span>
+                                <span class="ml-2">Overordnede aktører</span>
                               </div>
-                            </h4>
+                            </h5>
                           </div>
-                          <div class="card mb-3">
+                          <div class="card mb-2">
                             <div class="card-body p-0 m-0">
                               <table
                                 id="overordnedeaktoerer-tabel"
@@ -757,7 +757,7 @@ of Lorem Ipsum.
                             </div>
                           </div>
                           <button
-                            class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 mb-5"
+                            class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 mb-3"
                             data-toggle="modal"
                             data-target="#tilfoejoverordnedeaktoerer"
                           >
@@ -778,12 +778,12 @@ of Lorem Ipsum.
                           <div
                             class="d-flex align-items-center justify-content-between"
                           >
-                            <h4 class="mb-3 ml-1 mt-3 font-weight-bold">
+                            <h5 class="mb-3 ml-1 mt-2 font-weight-bold">
                               <div class="d-flex align-items-center">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
-                                  width="24"
-                                  height="24"
+                                  width="20"
+                                  height="20"
                                   viewBox="0 0 14 16"
                                 >
                                   <path
@@ -792,9 +792,9 @@ of Lorem Ipsum.
                                     d="M9 4V3c0-.55-.45-1-1-1H6c-.55 0-1 .45-1 1v1H1c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1H9zM6 3h2v1H6V3zm7 6H8v1H6V9H1V5h1v3h10V5h1v4z"
                                   />
                                 </svg>
-                                <span class="ml-3">Underordnede aktører</span>
+                                <span class="ml-2">Underordnede aktører</span>
                               </div>
-                            </h4>
+                            </h5>
                           </div>
                           <div class="card">
                             <table
@@ -1032,17 +1032,17 @@ of Lorem Ipsum.
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card mt-3 mb-5 p-lg-3">
+                        <div class="card mt-3 mb-3 p-lg-2">
                           <div class="card-body">
                             <div
-                              class="d-flex align-items-center justify-content-between"
+                              class="d-flex align-items-center justify-content-between mb-2"
                             >
-                              <h4 class="mb-3 ml-1 mt-3 font-weight-bold">
+                              <h5 class="mb-2 ml-1 mt-2 font-weight-bold">
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="24"
+                                    width="20"
+                                    height="20"
                                     viewBox="0 0 14 16"
                                   >
                                     <path
@@ -1051,9 +1051,9 @@ of Lorem Ipsum.
                                       d="M13 2H1v2h12V2zM0 4a1 1 0 0 0 1 1v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H1a1 1 0 0 0-1 1v2zm2 1h10v9H2V5zm2 3h6V7H4v1z"
                                     />
                                   </svg>
-                                  <span class="ml-3">Heuristiske enheder</span>
+                                  <span class="ml-2">Heuristiske enheder</span>
                                 </div>
-                              </h4>
+                              </h5>
                               <button
                                 class="btn btn-primary d-flex align-items-center"
                                 data-toggle="modal"
@@ -1172,17 +1172,17 @@ of Lorem Ipsum.
                   <div class="container-fluid">
                     <div class="row mb-3">
                       <div class="col-sm-12 p-0">
-                        <div class="card mt-3 mb-5 p-lg-3">
+                        <div class="card mt-3 mb-3 p-lg-2">
                           <div class="card-body">
                             <div
                               class="d-flex align-items-center justify-content-between"
                             >
-                              <h4 class="mb-3 ml-1 mt-3 font-weight-bold">
+                              <h5 class="mb-2 ml-1 mt-3 font-weight-bold">
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="24"
+                                    width="20"
+                                    height="20"
                                     viewBox="0 0 12 16"
                                   >
                                     <path
@@ -1191,9 +1191,9 @@ of Lorem Ipsum.
                                       d="M4 12h1v1H2v-1h1v-2H2V9h2v3zm8-7.5V14c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V2c0-.55.45-1 1-1h7.5L12 4.5zM11 5L8 2H1v12h10V5zM8 4H6v1h1v2H6v1h3V7H8V4zM2 4h3v4H2V4zm1 3h1V5H3v2zm3 2h3v4H6V9zm1 3h1v-2H7v2z"
                                     />
                                   </svg>
-                                  <span class="ml-3">Proveniensnr.</span>
+                                  <span class="ml-2">Proveniensnr.</span>
                                 </div>
-                              </h4>
+                              </h5>
                             </div>
                             <div class="card">
                               <table
@@ -1221,12 +1221,12 @@ of Lorem Ipsum.
                             <div
                               class="d-flex align-items-center justify-content-between"
                             >
-                              <h4 class="mb-3 ml-1 mt-3 font-weight-bold">
+                              <h5 class="mb-2 ml-1 mt-0 font-weight-bold">
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="24"
+                                    width="20"
+                                    height="20"
                                     viewBox="0 0 12 16"
                                   >
                                     <path
@@ -1235,9 +1235,9 @@ of Lorem Ipsum.
                                       d="M8.5 1H1c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V4.5L8.5 1zM11 14H1V2h7l3 3v9zM6 4.5l4 3-4 3v-2c-.98-.02-1.84.22-2.55.7-.71.48-1.19 1.25-1.45 2.3.02-1.64.39-2.88 1.13-3.73.73-.84 1.69-1.27 2.88-1.27v-2H6z"
                                     />
                                   </svg>
-                                  <span class="ml-3">Henvisning</span>
+                                  <span class="ml-2">Henvisning</span>
                                 </div>
-                              </h4>
+                              </h5>
                             </div>
                             <div class="card">
                               <table
@@ -1343,12 +1343,12 @@ of Lorem Ipsum.
                             <div
                               class="d-flex align-items-center justify-content-between"
                             >
-                              <h4 class="mb-3 ml-1 mt-3 font-weight-bold">
+                              <h5 class="mb-3 ml-1 mt-0 font-weight-bold">
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
-                                    width="24"
-                                    height="24"
+                                    width="20"
+                                    height="20"
                                     viewBox="0 0 12 16"
                                   >
                                     <path
@@ -1357,11 +1357,11 @@ of Lorem Ipsum.
                                       d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
                                     />
                                   </svg>
-                                  <span class="ml-3"
+                                  <span class="ml-2"
                                     >Anden arkivalieinformation</span
                                   >
                                 </div>
-                              </h4>
+                              </h5>
                             </div>
                             <div class="card">
                               <table
@@ -1692,12 +1692,12 @@ of Lorem Ipsum.
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5
+            <h6
               class="modal-title font-weight-bold"
               id="tilfoejoverordnedeaktoererModalLabel"
             >
               Tilknyt Overordnede Aktører
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -1720,7 +1720,7 @@ of Lorem Ipsum.
             </button>
           </div>
           <div class="modal-body pb-0">
-            <div class="card bg-light pt-3 pb-3">
+            <div class="card bg-light pt-2 pb-2">
               <div class="card-body">
                 <form>
                   <div class="container-fluid">
@@ -1785,9 +1785,9 @@ of Lorem Ipsum.
             </div>
             <div class="card mt-3">
               <div class="card-body p-0">
-                <h4 class="mb-3 ml-3 mt-3">
+                <h6 class="mb-1 ml-3 mt-1">
                   <span class="font-weight-bold">3</span> resultater
-                </h4>
+                </h6>
               </div>
             </div>
             <div class="card mt-3 mb-3">
@@ -1863,12 +1863,12 @@ of Lorem Ipsum.
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5
+            <h6
               class="modal-title font-weight-bold"
               id="tilfoejunderordenedeaktoererModalLabel"
             >
               Tilknyt Underordenede Aktører
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -1891,7 +1891,7 @@ of Lorem Ipsum.
             </button>
           </div>
           <div class="modal-body pb-0">
-            <div class="card bg-light pt-3 pb-3">
+            <div class="card bg-light pt-2 pb-2">
               <div class="card-body">
                 <form>
                   <div class="container-fluid">
@@ -1956,9 +1956,9 @@ of Lorem Ipsum.
             </div>
             <div class="card mt-3">
               <div class="card-body p-0">
-                <h4 class="mb-3 ml-3 mt-3">
+                <h6 class="mb-1 ml-3 mt-1">
                   <span class="font-weight-bold">3</span> resultater
-                </h4>
+                </h6>
               </div>
             </div>
             <div class="card mt-3">
