--- a/heuristiskenhed-accordion.html
+++ b/heuristiskenhed-accordion.html
@@ -63,15 +63,13 @@
         <div class="col-12 col-centered">
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
-              <a href="/search/search-heuristiskenhed.html" class="d-flex mb-4"
+              <a href="/search/search-heuristiskenhed.html" class="d-flex mb-2"
                 >« Tilbage</a
               >
               <h5 class="text-secondary">
-                Frederiksberg Politi               <span class="badge badge-info badge-pill ml-2"
-                >Heuristisk Enhed</span
-              >
+                Frederiksberg Politi <span class="badge badge-info badge-pill ml-2">Heuristisk Enhed</span>
               </h5>
-              <h3 class="font-weight-bold mb-5">
+              <h3 class="font-weight-bold mb-2">
                 Kredsaflytningssystem, 1950 - 1975
               </h3>
 
@@ -144,8 +142,8 @@
                                     <div class="d-flex align-items-center">
                                       <svg
                                         xmlns="http://www.w3.org/2000/svg"
-                                        width="24"
-                                        height="24"
+                                        width="20"
+                                        height="20"
                                         viewBox="0 0 12 16"
                                       >
                                         <path
@@ -2178,8 +2176,8 @@ versions of Lorem Ipsum.
                                               <svg
                                                 class="mr-3"
                                                 xmlns="http://www.w3.org/2000/svg"
-                                                width="24"
-                                                height="24"
+                                                width="20"
+                                                height="20"
                                                 viewBox="0 0 16 16"
                                               >
                                                 <path
@@ -2188,10 +2186,10 @@ versions of Lorem Ipsum.
                                                   d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                                                 />
                                               </svg>
-                                              <h5 class="font-weight-bold mb-0">
+                                              <h6 class="font-weight-bold mb-0">
                                                 Heuristisk identikatorformat
                                                 (HIF)
-                                              </h5>
+                                              </h6>
                                             </div>
                                             <div class="row mt-3 mb-3">
                                               <div class="col-sm-12">
@@ -2621,8 +2619,8 @@ versions of Lorem Ipsum.
                                               <svg
                                                 class="mr-3"
                                                 xmlns="http://www.w3.org/2000/svg"
-                                                width="24"
-                                                height="24"
+                                                width="20"
+                                                height="20"
                                                 viewBox="0 0 16 16"
                                               >
                                                 <path
@@ -2631,10 +2629,10 @@ versions of Lorem Ipsum.
                                                   d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                                                 />
                                               </svg>
-                                              <h5 class="font-weight-bold mb-0">
+                                              <h6 class="font-weight-bold mb-0">
                                                 Heuristisk identikatorformat
                                                 (HIF)
-                                              </h5>
+                                              </h6>
                                             </div>
                                             <div class="row mt-3 mb-3">
                                               <div class="col-sm-12">
@@ -3337,9 +3335,9 @@ versions of Lorem Ipsum.
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title font-weight-bold" id="tilfoejHIFmodallabel">
+            <h6 class="modal-title font-weight-bold" id="tilfoejHIFmodallabel">
               Tilføj Eksisterende HIF
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -3423,18 +3421,18 @@ versions of Lorem Ipsum.
                   </div>
                   <div class="card mt-3">
                     <div class="card-body p-0">
-                      <h4 class="mb-3 ml-3 mt-3">
+                      <h6 class="mb-1 ml-3 mt-1">
                         <span class="font-weight-bold">33</span> resultater
-                      </h4>
+                      </h6>
                     </div>
                   </div>
                   <div class="card mt-3 mb-3">
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=""
+                          id="hebetegnelse-tabel"
                           width="100%"
-                          class="table sorting table-hover table-striped mb-0"
+                          class="table sorting table-hover table-striped mb-0 compact"
                         >
                           <thead>
                             <tr>
@@ -3465,9 +3463,9 @@ versions of Lorem Ipsum.
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=""
+                          id="identifikatorformat-tabel"
                           width="100%"
-                          class="table sorting table-hover table-striped mb-0"
+                          class="table sorting table-hover table-striped mb-0 compact"
                         >
                           <thead>
                             <tr>
