--- a/heuristiskenhed-papir.html
+++ b/heuristiskenhed-papir.html
@@ -3800,12 +3800,12 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5
+            <h6
               class="modal-title font-weight-bold"
               id="tilknytarkivskaberModalLabel"
             >
               Tilknyt Arkivskaber
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -3828,7 +3828,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             </button>
           </div>
           <div class="modal-body pb-0">
-            <div class="card bg-light pt-3 pb-3">
+            <div class="card bg-light pt-2 pb-2">
               <div class="card-body">
                 <form>
                   <div class="container-fluid">
@@ -3893,12 +3893,12 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             </div>
             <div class="card mt-3">
               <div class="card-body p-0">
-                <h6 class="mb-3 ml-3 mt-3">
+                <h6 class="mb-1 ml-3 mt-1">
                   <span class="font-weight-bold">33</span> resultater
                 </h6>
               </div>
             </div>
-            <div class="card special mt-3 mb-3">
+            <div class="card mt-3 mb-3">
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
@@ -4150,9 +4150,9 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title font-weight-bold" id="tilfoejHIFmodallabel">
+            <h6 class="modal-title font-weight-bold" id="tilfoejHIFmodallabel">
               Tilføj Eksisterende HIF
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -4236,7 +4236,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                   </div>
                   <div class="card mt-3">
                     <div class="card-body p-0">
-                      <h6 class="mb-3 ml-3 mt-3">
+                      <h6 class="mb-1 ml-3 mt-1">
                         <span class="font-weight-bold">33</span> resultater
                       </h6>
                     </div>
