--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -2165,8 +2165,8 @@ versions of Lorem Ipsum.
                               <svg
                                 class="mr-3"
                                 xmlns="http://www.w3.org/2000/svg"
-                                width="24"
-                                height="24"
+                                width="20"
+                                height="20"
                                 viewBox="0 0 16 16"
                               >
                                 <path
@@ -2175,9 +2175,9 @@ versions of Lorem Ipsum.
                                   d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                                 />
                               </svg>
-                              <h5 class="font-weight-bold mb-0">
+                              <h6 class="font-weight-bold mb-0">
                                 Heuristisk identikatorformat (HIF)
-                              </h5>
+                              </h6>
                             </div>
                             <div class="row mt-3 mb-3">
                               <div class="col-sm-12">
@@ -2552,12 +2552,12 @@ versions of Lorem Ipsum.
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5
+            <h6
               class="modal-title font-weight-bold"
               id="tilfoejoverordnedeaktoererModalLabel"
             >
               Tilknyt Arkivskaber
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -2580,7 +2580,7 @@ versions of Lorem Ipsum.
             </button>
           </div>
           <div class="modal-body pb-0">
-            <div class="card bg-light pt-3 pb-3">
+            <div class="card bg-light pt-2 pb-2">
               <div class="card-body">
                 <form>
                   <div class="container-fluid">
@@ -2645,12 +2645,12 @@ versions of Lorem Ipsum.
             </div>
             <div class="card mt-3">
               <div class="card-body p-0">
-                <h4 class="mb-3 ml-3 mt-3">
+                <h6 class="mb-1 ml-3 mt-1">
                   <span class="font-weight-bold">4</span> resultater
-                </h4>
+                </h6>
               </div>
             </div>
-            <div class="card special mt-3 mb-3">
+            <div class="card mt-3 mb-3">
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
@@ -2829,9 +2829,9 @@ versions of Lorem Ipsum.
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title font-weight-bold" id="tilfoejHIFmodallabel">
+            <h6 class="modal-title font-weight-bold" id="tilfoejHIFmodallabel">
               Tilføj Eksisterende HIF
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -2915,9 +2915,9 @@ versions of Lorem Ipsum.
                   </div>
                   <div class="card mt-3">
                     <div class="card-body p-0">
-                      <h4 class="mb-3 ml-3 mt-3">
+                      <h6 class="mb-1 ml-3 mt-1">
                         <span class="font-weight-bold">33</span> resultater
-                      </h4>
+                      </h6>
                     </div>
                   </div>
                   <div class="card mt-3 mb-3">
@@ -2957,7 +2957,7 @@ versions of Lorem Ipsum.
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=identifikatorformat-tabel"
+                          id="identifikatorformat-tabel"
                           width="100%"
                           class="table sorting table-hover table-striped mb-0 compact"
                         >
