--- a/fif.html
+++ b/fif.html
@@ -63,9 +63,9 @@
         <div class="col-12 col-centered">
           <div class="card bg-white pt-2 pr-2 pl-2 pb-4">
             <div class="card-body">
-              <span class="badge badge-warning badge-pill mt-3 mb-2">FIF</span>
-              <h3 class="font-weight-bold mb-2">
-                Fremfindingsidentikatorformat
+              <h3 class="font-weight-bold mb-0 d-flex align-items-center">
+                Fremfindingsidentikatorformat <span class="badge badge-warning badge-pill ml-2">FIF</span>
+
               </h3>
               <div class="row mt-1 mb-1">
                 <div class="col-sm-6">
@@ -383,9 +383,9 @@
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title font-weight-bold" id="tilknytDIFModalLabel">
+            <h6 class="modal-title font-weight-bold" id="tilknytDIFModalLabel">
               Tilknyt DIF
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -423,7 +423,7 @@
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=""
+                          id="identifikatorformat-tabel"
                           width="100%"
                           class="table sorting table-hover table-striped mb-0 compact"
                         >
@@ -460,7 +460,7 @@
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=""
+                          id="tilknytdif-tabel"
                           width="100%"
                           class="table sorting table-hover table-striped mb-0 compact"
                         >
