--- a/hif.html
+++ b/hif.html
@@ -14,7 +14,7 @@
 
   <body class="bg-light">
     <div class="container-fluid">
-      <div class="col-sm-10 col-centered">
+      <div class="col-sm-12 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
           <a class="navbar-brand" href="/index.html">
             <svg
@@ -60,15 +60,14 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 col-centered">
-          <div class="card bg-white pt-3 pr-4 pl-4 pb-8">
+        <div class="col-12 col-centered">
+          <div class="card bg-white pt-2 pr-2 pl-2 pb-3">
             <div class="card-body">
-              <span class="badge badge-warning badge-pill mt-3 mb-4">HIF</span>
-              <h1 class="font-weight-bold mb-4">
-                Heuristik identikatorformat
-              </h1>
-              <div class="card bg-light mb-4 mt-3">
-                <div class="card-body pt-2 pb-2">
+              <h3 class="font-weight-bold mb-3 d-flex align-items-center">
+                Heuristik identikatorformat <span class="badge badge-warning badge-pill ml-2">HIF</span>
+              </h3>
+              <div class="card bg-light mb-3 mt-2">
+                <div class="card-body pt-1 pb-1">
                   <div class="row mt-3 mb-3">
                     <div class="col-sm-6">
                       <div class="form-group">
@@ -99,7 +98,7 @@
                 <div class="card-body p-0 m-0">
                   <table
                     id="hif-modal-tabel"
-                    class="table sorting table-hover table-striped mb-0"
+                    class="table sorting table-hover table-striped mb-0 compact"
                     width="100%"
                   >
                     <thead>
@@ -412,9 +411,9 @@
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title font-weight-bold" id="tilknytDIFModalLabel">
+            <h6 class="modal-title font-weight-bold" id="tilknytDIFModalLabel">
               Tilknyt DIF
-            </h5>
+            </h6>
             <button
               type="button"
               class="btn close"
@@ -498,18 +497,18 @@
                   </div>
                   <div class="card mt-3">
                     <div class="card-body p-0">
-                      <h4 class="mb-3 ml-3 mt-3">
+                      <h6 class="mb-1 ml-3 mt-1">
                         <span class="font-weight-bold">33</span> resultater
-                      </h4>
+                      </h6>
                     </div>
                   </div>
                   <div class="card mt-3 mb-3">
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=""
+                          id="tilknytdif-tabel"
                           width="100%"
-                          class="table sorting table-hover table-striped mb-0"
+                          class="table sorting table-hover table-striped mb-0 compact"
                         >
                           <thead>
                             <tr>
@@ -540,9 +539,9 @@
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=""
+                          id="identifikatorformat-tabel"
                           width="100%"
-                          class="table sorting table-hover table-striped mb-0"
+                          class="table sorting table-hover table-striped mb-0 compact"
                         >
                           <thead>
                             <tr>
@@ -570,16 +569,16 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <h5 class="font-weight-semibold mb-3 mt-0 ml-2">
+                  <h6 class="font-weight-semibold mb-3 mt-0 ml-2">
                     Vælg DIF
-                  </h5>
+                  </h6>
                   <div class="card mt-3 mb-3">
                     <div class="card-body p-0">
                       <div class="table-responsive">
                         <table
-                          id=""
+                          id="tilknytdif-2-tabel"
                           width="100%"
-                          class="table sorting table-hover table-striped mb-0"
+                          class="table sorting table-hover table-striped mb-0 compact"
                         >
                           <thead>
                             <tr>
@@ -630,5 +629,7 @@
     />
     <script src="src/js/dataTables.rowReorder.min.js"></script>
     <script src="src/js/script.js"></script>
+    <script>
+</script>
   </body>
 </html>
