--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -14,7 +14,7 @@
 
   <body class="bg-light">
     <div class="container-fluid">
-      <div class="col-sm-10 col-centered">
+      <div class="col-sm-12 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
           <a class="navbar-brand" href="/index.html">
             <svg
@@ -60,16 +60,13 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 col-centered">
-          <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
+        <div class="col-12 col-centered">
+          <div class="card bg-white pt-2 pr-3 pl-3 pb-2">
             <div class="card-body">
-              <a href="/index.html#magasinenhed" class="d-flex mb-4"
+              <a href="/index.html#magasinenhed" class="d-flex mb-2"
                 >« Tilbage</a
               >
-              <span class="badge badge-danger badge-pill mt-2 mb-4"
-                >Magasinenhed</span
-              >
-              <button class="btn btn-primary float-right readonly mr-3">
+              <button class="btn btn-primary float-right readonly mr-0">
                 <span class="d-flex align-items-center">
                   <span>Rediger i AIDA</span>
                   <svg
@@ -87,16 +84,18 @@
                   </svg>
                 </span>
               </button>
-              <h1 class="font-weight-bold mb-5">Stregkode: 802367816</h1>
+              <h3 class="font-weight-bold mb-2 d-flex align-items-center">Stregkode: 802367816 <span class="badge badge-danger badge-pill ml-2"
+                >Magasinenhed</span
+              ></h3>
               <div class="container-fluid">
                 <div class="row mb-3 mt-3">
-                  <div class="card fixed w-100 mb-10">
+                  <div class="card fixed w-100 mb-6">
                     <div
                       class="card-header d-flex align-items-center justify-content-between bg-light"
                     >
-                      <h5 class="mb-0">
+                      <h6 class="mb-0">
                         Beskrivelse
-                      </h5>
+                      </h6>
                       <button class="btn btn-primary float-right readonly edit">
                         Rediger
                       </button>
@@ -112,12 +111,12 @@
                     <div class="card-body p-lg-3">
                       <div class="row">
                         <div class="col-sm-6">
-                          <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                          <h5 class="font-weight-bold mt-3 ml-3 mb-2">
                             <div class="d-flex align-items-center">
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
-                                width="24"
-                                height="24"
+                                width="20"
+                                height="20"
                                 viewBox="0 0 12 16"
                               >
                                 <path
@@ -126,10 +125,10 @@
                                   d="M2 13c0 .59 0 1-.59 1H.59C0 14 0 13.59 0 13c0-.59 0-1 .59-1h.81c.59 0 .59.41.59 1H2zm2.59-9h6.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1H4.59C4 2 4 2.41 4 3c0 .59 0 1 .59 1zM1.41 7H.59C0 7 0 7.41 0 8c0 .59 0 1 .59 1h.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01zm0-5H.59C0 2 0 2.41 0 3c0 .59 0 1 .59 1h.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01zm10 5H4.59C4 7 4 7.41 4 8c0 .59 0 1 .59 1h6.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01zm0 5H4.59C4 12 4 12.41 4 13c0 .59 0 1 .59 1h6.81c.59 0 .59-.41.59-1 0-.59 0-1-.59-1h.01z"
                                 />
                               </svg>
-                              <span class="ml-3">Detaljer</span>
+                              <span class="ml-2">Detaljer</span>
                             </div>
-                          </h4>
-                          <ul class="list-group mb-5 mr-3 ml-3">
+                          </h5>
+                          <ul class="list-group mb-3 mr-3 ml-3">
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
@@ -218,7 +217,7 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                           </ul>
                         </div>
                         <div class="col-sm-6">
-                          <ul class="list-group mt-6 mr-3 ml-3">
+                          <ul class="list-group mt-5 mr-3 ml-3">
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
@@ -351,17 +350,17 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                           </ul>
                         </div>
                       </div>
-                      <div class="row mt-5 mb-3">
+                      <div class="row mt-3 mb-3">
                         <div class="col-sm-6">
                           <div
                             class="d-flex align-items-center justify-content-between mr-3 ml-1"
                           >
-                            <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                            <h5 class="font-weight-bold mt-3 ml-3 mb-4">
                               <span class="d-flex align-items-center">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
-                                  width="24"
-                                  height="24"
+                                  width="20"
+                                  height="20"
                                   viewBox="0 0 15 16"
                                 >
                                   <path
@@ -370,9 +369,9 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                     d="M7.73 1.73C7.26 1.26 6.62 1 5.96 1H3.5C2.13 1 1 2.13 1 3.5v2.47c0 .66.27 1.3.73 1.77l6.06 6.06c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41L7.73 1.73zM2.38 7.09c-.31-.3-.47-.7-.47-1.13V3.5c0-.88.72-1.59 1.59-1.59h2.47c.42 0 .83.16 1.13.47l6.14 6.13-4.73 4.73-6.13-6.15zM3.01 3h2v2H3V3h.01z"
                                   />
                                 </svg>
-                                <span class="ml-3">Etiketteoplysninger</span>
+                                <span class="ml-2">Etiketteoplysninger</span>
                               </span>
-                            </h4>
+                            </h5>
                             <button
                               class="btn btn-outline-primary float-right d-flex align-items-center"
                             >
@@ -402,13 +401,22 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                               <span>Udskriv etiket</span>
                             </button>
                           </div>
-                          <ul class="list-group mb-5 mr-3 ml-3">
+                          <ul class="list-group mb-3 mr-3 ml-3">
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
                                   Enhed fra Statens Arkiver
                                 </div>
                                 <div class="col-sm-6 readonly">Rigsarkivet</div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="Rigsarkivet"
+                                    />
+                                  </div>
+                                </div>
                               </div>
                             </li>
                             <li class="list-group-item">
@@ -418,6 +426,15 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                 </div>
                                 <div class="col-sm-6 readonly">
                                   Retten på Frederiksberg
+                                </div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="Retten på Frederiksberg"
+                                    />
+                                  </div>
                                 </div>
                               </div>
                             </li>
@@ -429,6 +446,15 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                 <div class="col-sm-6 readonly">
                                   Frederiksberg Fogedret
                                 </div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="Frederiksberg Fogedret"
+                                    />
+                                  </div>
+                                </div>
                               </div>
                             </li>
                             <li class="list-group-item">
@@ -438,6 +464,15 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                 </div>
                                 <div class="col-sm-6 readonly">
                                   DF-011
+                                </div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="DF-011"
+                                    />
+                                  </div>
                                 </div>
                               </div>
                             </li>
@@ -449,6 +484,15 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                 <div class="col-sm-6 readonly">
                                   Register til Fogedsagliste
                                 </div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="Register til Fogedsagliste"
+                                    />
+                                  </div>
+                                </div>
                               </div>
                             </li>
                             <li class="list-group-item">
@@ -458,6 +502,15 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                 </div>
                                 <div class="col-sm-6 readonly">
                                   1993-1994
+                                </div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="1993-1994"
+                                    />
+                                  </div>
                                 </div>
                               </div>
                             </li>
@@ -472,6 +525,14 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                     1994 5778
                                   </p>
                                 </div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="1993 1 - 1994 5778" />
+                                  </div>
+                                </div>
                               </div>
                             </li>
                             <li class="list-group-item">
@@ -482,6 +543,15 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                 <div class="col-sm-6 readonly text-secondary">
                                   1
                                 </div>
+                                <div class="col-sm-6 write">
+                                  <div class="form-group mb-0">
+                                    <input
+                                      type="text"
+                                      class="form-control"
+                                      value="1"
+                                    />
+                                  </div>
+                                </div>
                               </div>
                             </li>
                           </ul>
@@ -490,12 +560,12 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                           <div
                             class="d-flex align-items-center justify-content-between mr-3 ml-1"
                           >
-                            <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                            <h5 class="font-weight-bold mt-3 ml-3 mb-4">
                               <div class="d-flex align-items-center">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
-                                  width="24"
-                                  height="24"
+                                  width="20"
+                                  height="20"
                                   viewBox="0 0 16 16"
                                 >
                                   <path
@@ -504,9 +574,9 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                     d="M15.5 4.7L8.5 0l-7 4.7c-.3.19-.5.45-.5.8V16l7.5-4 7.5 4V5.5c0-.34-.2-.61-.5-.8zm-.5 9.8l-6-3.25V10H8v1.25L2 14.5v-9l6-4V6h1V1.5l6 4v9zM6 7h5V5l3 3-3 3V9H6v2L3 8l3-3v2z"
                                   />
                                 </svg>
-                                <span class="ml-3">Placeringer</span>
+                                <span class="ml-2">Placeringer</span>
                               </div>
-                            </h4>
+                            </h5>
                           </div>
                           <div class="row">
                             <div class="col-sm-12">
@@ -545,13 +615,13 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                         </div>
                       </div>
                       <hr />
-                      <div class="row mt-5 mb-3 ml-1 mr-1">
+                      <div class="row mt-3 mb-3 ml-1 mr-1">
                         <div class="col-sm-12">
                           <div class="d-flex align-items-center mt-3 mb-2">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
-                              width="24"
-                              height="24"
+                              width="20"
+                              height="20"
                               viewBox="0 0 16 16"
                             >
                               <path
@@ -560,9 +630,9 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                 d="M15.5 4.7L8.5 0l-7 4.7c-.3.19-.5.45-.5.8V16l7.5-4 7.5 4V5.5c0-.34-.2-.61-.5-.8zm-.5 9.8l-6-3.25V10H8v1.25L2 14.5v-9l6-4V6h1V1.5l6 4v9zM6 7h5V5l3 3-3 3V9H6v2L3 8l3-3v2z"
                               />
                             </svg>
-                            <h4 class="font-weight-bold mb-0 ml-3">
+                            <h5 class="font-weight-bold mb-0 ml-3">
                               Eksemplarer og indhold
-                            </h4>
+                            </h5>
                           </div>
                           <p class="ml-1 text-secondary mb-4">
                             Klik på en et eksemplar for at se yderligere
@@ -572,7 +642,7 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                             <div class="card-body p-0 m-0">
                               <table
                                 id="heeksemplar-tabel"
-                                class="table sorting table-hover table-striped mb-0"
+                                class="table sorting table-hover table-striped mb-0 compact"
                                 width="100%"
                               >
                                 <thead>
@@ -674,9 +744,9 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                     <div
                                       class="d-flex align-items-center justify-content-between"
                                     >
-                                      <h5 class="mb-0">
+                                      <h6 class="mb-0">
                                         Register til Fogedsagliste
-                                      </h5>
+                                      </h6>
                                       <button
                                         class="btn btn-primary float-right readonly edit"
                                       >
