Added new He webpage design

--- a/search/search-heuristiskenhed.html
+++ b/search/search-heuristiskenhed.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -196,7 +196,7 @@
                   <tbody>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed-tabs.html"
                     >
                       <td>
                         Indenrigsministeriet
@@ -209,7 +209,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed-tabs.html"
                     >
                       <td>
                         Indenrigsministeriet
@@ -222,7 +222,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed-tabs.html"
                     >
                       <td>
                         Indenrigsministeriet
@@ -235,7 +235,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed-tabs.html"
                     >
                       <td>
                         Indenrigsministeriet
@@ -248,7 +248,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed-tabs.html"
                     >
                       <td>
                         Indenrigsministeriet
